dropdown list (picker)

--- a/ConsultationApp/ConsultationApp/ConsultationPage.xaml
+++ b/ConsultationApp/ConsultationApp/ConsultationPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              x:Class="ConsultationApp.ConsultationPage" Title="Создать заявку">
     <StackLayout>
         <StackLayout>
@@ -11,8 +11,18 @@
             <Label Text="Телефон" />
             <Entry Text="{Binding Path=Model.Phone}" FontSize="Medium" />
             <Label Text="Вопрос" />
-            <Entry Text="{Binding Path=Model.Question}" FontSize="Medium" />
+            <!--<Entry Text="{Binding Path=Model.Question}" FontSize="Medium" />-->
+            
+
+
         </StackLayout>
+
+        <StackLayout Margin="20">
+            <Label Text="Выбор консультанта" FontAttributes="Bold" HorizontalOptions="Center" />
+            <Picker Title="Вы выбрали" ItemsSource="{Binding ConsultantList}" SelectedItem="{Binding Model.Question, Mode=TwoWay}" />
+        </StackLayout>
+
+
         <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
             <Button Text="Сохранить" Command="{Binding ViewModel.SaveConsultationCommand}" CommandParameter="{Binding Model}" />
             <Button Text="Назад" Command="{Binding Path=ViewModel.BackCommand}" />
