--- a/ConsultationApp/ConsultationApp/ConsultationsListPage.xaml
+++ b/ConsultationApp/ConsultationApp/ConsultationsListPage.xaml
@@ -13,6 +13,7 @@
                             <StackLayout>
                                 <Label Text="{Binding Name}" FontSize="Medium" />
                                 <Label Text="{Binding Question}" FontSize="Small" />
+                                <Label Text="{Binding Consultant}" FontSize="Small" />
                             </StackLayout>
                         </ViewCell.View>
                     </ViewCell>
